# agent-data-residency-mcp

./: .cursorrules  .gitignore  README.md  SECURITY.md  acp.json  agent-data-residency.mcpb  glama.json  llms.txt  manifest.json  pyproject.toml  server.json  server.py  smithery.yaml  test_server.py
.github/workflows/: release-sigstore.yml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
.well-known/mcp/: server-card.json
